v6: Java 24 compatibility, full controller test suite, H2 test config
- Upgraded Lombok to 1.18.42, MapStruct to 1.6.3 for Java 24 support
- Upgraded Mockito to 5.14.2 + Byte Buddy to 1.15.10 for test mocking on Java 24
- Added Surefire JVM args: -XX:+EnableDynamicAgentLoading -Dnet.bytebuddy.experimental=true
- Changed Java target from 17 to 21
- Added H2 in-memory DB for test isolation (src/test/resources/application.properties)
- Added MockMvc controller tests: AuthControllerTest, CategoryControllerTest,
  CartControllerTest, OrderControllerTest (46 tests total, all passing)
- Updated README, PROCESS, ISSUES docs with Java 24 migration details and full API table

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>